bk_ida/gobmkida/c2/sgfAddChild
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddChild/src/sgf/sgfnode.c:1158:12: error: expected expression
*( _OWORD *)&result->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddChild/src/sgf/sgfnode.c:1158:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddChild/src/sgf/sgfnode.c:1159:12: error: expected expression
*( _OWORD *)&result->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddChild/src/sgf/sgfnode.c:1159:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->props = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddChild/src/obj/4/sgfnode.o] Error 1
